--- a/.github/workflows/yarn-upgrade.yml
+++ b/.github/workflows/yarn-upgrade.yml
@@ -1,3 +1,10 @@
+- name: Yarn Upgrader
+  uses: browniebroke/yarn-upgrade-action@v1.1
+  on:
+    push:
+      branches: 
+      - dependency-management
+      
 jobs:
   build:
     runs-on: ubuntu-latest
