--- a/.github/workflows/yarn-upgrade.yml
+++ b/.github/workflows/yarn-upgrade.yml
@@ -1,10 +1,8 @@
-- name: Yarn Upgrader
-  uses: browniebroke/yarn-upgrade-action@v1.1
-  on:
-    push:
-      branches: 
-      - dependency-management
-      
+name: Yarn Upgrader
+on:
+  push:
+    branches: [ dependency-management ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
